--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,3 @@
-@import "./global/reset";
-@import "./global/mixin";
-@import "./global/variables";
+@forward "./reset";
+@forward "./mixin";
+@forward "./variables";
