--- a/client/src/styles/reset.scss
+++ b/client/src/styles/reset.scss
@@ -87,9 +87,9 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -126,4 +126,25 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+html,
+body {
+  font-size: 10px;
+}
+
+#app {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: black;
 }
