--- a/client/src/styles/_reset.scss
+++ b/client/src/styles/_reset.scss
@@ -133,18 +133,9 @@ body {
   font-size: 10px;
 }
 
-#app {
-  width: 100%;
-  height: 100vh;
-  box-sizing: border-box;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-}
-
 a {
   width: 100%;
   height: 100%;
   text-decoration: none;
-  color: black;
+  color: inherit;
 }
