--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,12 @@
 @forward "./reset";
 @forward "./mixin";
 @forward "./variables";
+
+#app {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+}
