--- a/client/src/styles/_reset.scss
+++ b/client/src/styles/_reset.scss
@@ -87,7 +87,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
 }
@@ -130,6 +129,7 @@ table {
 
 html,
 body {
+  position: relative;
   font-size: 10px;
 }
 
