--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -3,10 +3,11 @@
 @forward "./variables";
 
 #app {
+  position: relative;
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
-  font-size: 16px;
+  font-size: 1.6rem;
   margin: 0;
   padding: 0;
 }
