--- a/client/src/styles/_reset.scss
+++ b/client/src/styles/_reset.scss
@@ -83,6 +83,7 @@ summary,
 time,
 mark,
 audio,
+input,
 video {
   margin: 0;
   padding: 0;
@@ -137,5 +138,13 @@ a {
   width: 100%;
   height: 100%;
   text-decoration: none;
+  color: inherit;
+}
+button {
+  display: inline-flex;
+  border: none;
+  background-color: transparent;
+  box-sizing: border-box;
+  cursor: pointer;
   color: inherit;
 }
