--- a/client/src/styles/_reset.scss
+++ b/client/src/styles/_reset.scss
@@ -90,6 +90,8 @@ video {
   border: 0;
   vertical-align: baseline;
   box-sizing: border-box;
+  font-size: inherit;
+  color: inherit;
 }
 /* HTML5 display-role reset for older browsers */
 article,
